# meos

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  MeOS.vcxproj  README.md  UPSTREAM_SYNC.md  a.out  docker-compose.yml  fix_ambiguous.py  fix_open.py  fix_snprintf.py  fix_sql.py  fix_sql_v2.py  fix_sql_v3.py  fix_sql_v4.py  fix_sql_v5.py  fix_swprintf.py  vcpkg.json  verify_includes.py
.claude/skills/: ci-cd.md
.gemini/: ralph-unignore  settings.json
.gemini/skills/: build-environment.md  build-system.md  card-punch-migration.md  ci-cd.md  ci-vcpkg.md  data-table-patterns.md  decoupling.md  form-patterns.md  frontend.md  gdi-migration.md  include-normalization.md  migration.md  react-form-patterns.md  results-patterns.md  string-migration.md  web-frontend-setup.md  web-scaffolding.md  win32-replacements.md
.github/: AGENTS.md  copilot-instructions.md
.github/workflows/: build-legacy.yml  build.yml  ci.yml  cpp.yml  frontend.yml
build-current/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  meos
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_new/: CMakeCache.txt  CTestTestfile.cmake  Makefile  build_output.txt  cmake_install.cmake
build_test/: CMakeCache.txt
code/: AGENTS.md  HTMLWriter.cpp  MeOS.vcxproj  MeOSFeatures.h  MeosSQL.cpp  MeosSQL.h  RestService.cpp  RunnerDB.cpp  RunnerDB.h  SportIdent.cpp  SportIdent.h  StdAfx.h  TabAuto.cpp  TabAuto.h  TabBase.h  TabClass.cpp  TabClass.h  TabClub.h  TabCompetition.cpp  TabCompetition.h  TabControl.cpp  TabControl.h  TabCourse.cpp  TabList.cpp  TabList.h  TabMulti.cpp  TabMulti.h  TabRunner.cpp  TabSI.cpp  TabSpeaker.h  TabTeam.h  Table.cpp  Table.h  Table_stub.cpp  TimeStamp.cpp  Wincodec.h  animationdata.h  autocompletehandler.h  autotask.cpp  autotask.h  (+95 more)
legacy/: AGENTS.md
plan/: metrics.csv  prd-build-infrastructure.md  prd-core-migration.md  prd-legacy-preparation.md  prd-platform-modernization.md  prd-web-frontend.md  prd.json  progress.txt  prompt.md  ralph.sh
plans/: gdioutput_domain_mapping.md  prd.json  progress.txt  ralph.sh  win32_non_ui_mapping.md
resources/: meoslang.rc
src/: AGENTS.md  main.cpp
src/app/: CMakeLists.txt  MeOSFeatures.cpp  NullNotifier.h  autocompletehandler.h  autotask.cpp  meos.cpp  prefseditor.cpp  progress.h  recorder.cpp  recorder.h  resource.h  server_main.cpp  testmeos.cpp  testmeos.h
src/db/: AGENTS.md  CMakeLists.txt  MeosSQL.cpp  MeosSQL.h  RunnerDB.cpp  mysqldaemon.cpp  mysqlwrapper.cpp  mysqlwrapper.h  no_mysql_stub.cpp  oEventSQL.cpp  sqlitedatabase.cpp  sqlitedatabase.h
src/domain/: AGENTS.md  CMakeLists.txt  IEventNotifier.h  MachineContainer.h  MeOSFeatures.cpp  MeOSFeatures.h  MeosSQL.cpp  RestService.cpp  RunnerDB.cpp  RunnerDB.h  SICard.h  SportIdent.cpp  SportIdent.h  TabSI.h  Table.cpp  Table.h  TableType.h  animationdata.h  binencoder.h  cardsystem.cpp  classconfiginfo.cpp  classconfiginfo.h  csvparser.cpp  datadefiners.h  domain_header.h  domain_module.cpp  gdiconstants.h  gdifonts.h  gdioutput.h  generalresult.cpp  generalresult.h  guihandler.h  image.h  infoserver.cpp  liveresult.cpp  localizer.h  maprenderer.h  meos.cpp  metalist.cpp  metalist.h  (+48 more)
src/hw/: SportIdent.cpp
src/io/: CMakeLists.txt  HTMLWriter.cpp  HTMLWriter.h  binencoder.cpp  binencoder.h  csvimporter.cpp  csvimporter.h  image.cpp  image.h  importformats.cpp  iof30interface.cpp  iof30interface.h  oFreeImport.cpp  oFreeImport.h  parser.cpp  pdfwriter.cpp  pdfwriter.h  printresultservice.cpp  printresultservice.h  xmlparser.h
src/net/: CMakeLists.txt  RestService.cpp  RestService.h  api_router.h  automation_handlers.h  card_handlers.h  class_handlers.h  club_handlers.h  competition_handlers.h  control_handlers.h  course_handlers.h  download.cpp  download.h  import_export_handlers.h  infoserver.cpp  infoserver.h  json_serializers.h  list_handlers.h  liveresult.cpp  onlineinput.cpp  onlineinput.h  onlineresults.cpp  onlineresults.h  restserver.cpp  restserver.h  runner_handlers.h  socket.cpp  socket.h  speaker_handlers.h  static_file_handler.h  team_handlers.h
src/print/: Printer.h  printer.cpp
src/util/: AGENTS.md  CMakeLists.txt  SICard.h  TimeStamp.cpp  TimeStamp.h  common_enums.h  csvparser.cpp  csvparser.h  gdioutput_stub.cpp  inthashmap.h  intkeymap.hpp  intkeymapimpl.hpp  localizer.cpp  localizer.h  machinecontainer.h  meos_stubs.cpp  meos_util.cpp  meos_util.h  meosexception.h  newcompetition.cpp  owordlist.cpp  owordlist.h  parser.cpp  parser.h  placeholder.cpp  platform_socket.cpp  platform_socket.h  platform_string.h  platform_time.h  random.cpp  random.h  timeconstants.hpp  util_dummy.cpp  util_header.h  utm.h  utm_interface.h  win_types.h  xmlparser.cpp  xmlparser.h  zip.cpp
test/: MockNotifier.h  portable_tests.cpp  testmeos.cpp  tests.cpp
tests/: AGENTS.md  CMakeLists.txt  db_test.cpp  domain_test.cpp  io_test.cpp  localizer_test.cpp  net_test.cpp  smoke_test.cpp  util_test.cpp
tests/domain/: CMakeLists.txt  smoke_test.cpp
tests/util/: CMakeLists.txt  smoke_test.cpp
(+184 files in other folders)
